@@ -151,7 +151,7 @@ applied.
   or <code>th</code><td><code>align</code> or <code>valign</code>
   <td>Enumerated attribute [HTML5]
   <tr><td><code>link</code><td><code>target</code>
-  <td>Valid browsing context name [HTML5]
+  <td>Valid browsing context name or keyword [HTML5]
   <tr id=html-meta-scheme><td><code>meta</code><td><code>schema</code>
   <td>Any string
   <!--
